# PCSC2017_Group12

./: .directory  .gitignore  CMakeLists.txt  README.md  config_file
Documentation/: config_file
Tests/: CMakeLists.txt  TestBaseClasses.cpp  TestExceptionalCases.cpp  TestSolverClasses.cpp  example_test.cpp
Tests/FilesForTests/: GenerateTestFiles.m
demo/: CMakeLists.txt  Demo.cpp  Demo.hpp  main.cpp
src/: CGSolver.cpp  CGSolver.hpp  CMakeLists.txt  Cholesky.cpp  Cholesky.hpp  CholeskySolver.cpp  CholeskySolver.hpp  DirectSolver.cpp  DirectSolver.hpp  Exception.cpp  Exception.hpp  GSSolver.cpp  GSSolver.hpp  IterativeSolver.cpp  IterativeSolver.hpp  JacSolver.cpp  JacSolver.hpp  LUSolver.cpp  LUSolver.hpp  LinSysSolver.cpp  LinSysSolver.hpp  Matrix.cpp  Matrix.hpp  RichSolver.cpp  RichSolver.hpp  Vector.cpp  Vector.hpp  main.cpp
